# flowbuddy

./: .gitignore  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/.pgdata/: logfile  postmaster.opts
backend/.pgdata/base/1/: 13941  2619
backend/.pgdata/global/: 1214  1214_vm  1260  1260_vm  1262  2671  2676  pg_control  pg_internal.init
backend/.pgdata/pg_stat/: db_0.stat  db_14118.stat  db_16384.stat  global.stat
backend/alembic/: env.py
backend/alembic/versions/: 202410041200_initial_schema.py
backend/app/: main.py
backend/app/core/: config.py  context.py  logging.py  middleware.py
backend/app/db/: __init__.py  base.py  deps.py  session.py  types.py
backend/app/observability/: __init__.py  client.py  metrics.py  tracing.py
backend/app/services/: brain_dump_extractor.py  dashboard_service.py  intervention_service.py  job_runner.py  plan_evaluator.py  resolution_approval.py  resolution_decomposer.py  resolution_intake.py  resolution_tasks.py  user_service.py  weekly_planner.py
backend/app/worker/: scheduler_main.py
backend/tests/: test_agent_log_api.py  test_app_routes.py  test_brain_dump_api.py  test_dashboard_api.py  test_health.py  test_interventions_preview.py  test_interventions_run_latest.py  test_job_runner.py  test_jobs_routes.py  test_metrics.py  test_models.py  test_notifications.py  test_observability.py  test_observability_enabled.py  test_opik_regression_runner.py  test_resolution_api.py  test_resolution_decompose_api.py  test_tasks_api.py  test_weekly_plan_preview.py  test_weekly_plan_run_latest.py
(+138 files in other folders)
